--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
      
     <div class="footer">
-        <div class="text">Challenge by: <span>Frontend Mentor</span> || Coded by: <span>daniel swift</span></div>
+        <div class="text">Challenge by: <span>Frontend Mentor</span> || Coded by: <span>Isaac Joshua</span></div>
     </div>
 </body>
 </html>
